@@ -47,6 +47,7 @@
 #include <ql/Math/kronrodintegral.hpp>
 #include <ql/Math/lexicographicalview.hpp>
 #include <ql/Math/linearinterpolation.hpp>
+#include <ql/Math/linearleastsquaresregression.hpp>
 #include <ql/Math/loglinearinterpolation.hpp>
 #include <ql/Math/multicubicspline.hpp>
 #include <ql/Math/normaldistribution.hpp>
